--- a/css/css-style.css
+++ b/css/css-style.css
@@ -32,7 +32,9 @@
 /* ===== Google Fonts ===== */
 @import url('https://fonts.googleapis.com/css2?family=Alex+Brush&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Nunito+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap');
 
-
+.toright img {
+    transform: translatey(-30px);
+}
 
 /* ===== Default style ===== */
 html,
